addons/argocd/gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "gateway-argocd.sctp-sandbox.com"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: argocd-listeners
      sectionName: argocd-https
  hostnames:
    - gateway-argocd.sctp-sandbox.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
